# Everytin

./: .gitignore  README.md  create-ico.mjs  index.html  package-lock.json  package.json  start.bat  tailwind.config.ts  vite.config.ts
.claude/: settings.json  settings.local.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: automation.rs  clipboard_monitor.rs  error.rs  lib.rs  main.rs  notifications.rs  state.rs  tray.rs
src-tauri/src/commands/: ai.rs  automation.rs  battery.rs  cleanup.rs  clipboard.rs  command_bar.rs  drivers.rs  focus.rs  installer.rs  mod.rs  performance.rs  plugins.rs  security.rs  services.rs  session.rs  settings.rs  smart_modes.rs  system.rs  updates.rs
src-tauri/src/db/: migrations.rs  mod.rs
src/components/command-bar/: CommandBar.tsx  CommandItem.tsx  commandRegistry.ts
src/components/layout/: AppShell.tsx  Sidebar.tsx
src/components/shared/: LiveChart.tsx  (+3 more)
src/hooks/: useSystemMetrics.ts  useWidgetLayout.ts
src/lib/: store.ts  tauri.ts  utils.ts
src/pages/: Assistant.tsx  Automation.tsx  Battery.tsx  Cleanup.tsx  ClipboardHistory.tsx  Dashboard.tsx  Drivers.tsx  FocusMode.tsx  Installer.tsx  Performance.tsx  Placeholder.tsx  PluginMarketplace.tsx  Security.tsx  Services.tsx  SessionRestore.tsx  Settings.tsx  Setup.tsx  Updates.tsx  Widgets.tsx
src/types/: ai.ts  automation.ts  battery.ts  clipboard.ts  drivers.ts  focus.ts  installer.ts  plugin.ts  security.ts  services.ts  session.ts  settings.ts  smart_modes.ts  system.ts  updates.ts
(+15 files in other folders)
