[package]
name = "everytin"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "everytin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "everytin"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sysinfo = "0.31"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
winapi = { version = "0.3", features = ["psapi", "processthreadsapi", "handleapi", "tlhelp32", "winnt"] }

[profile.dev]
incremental = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
